Generated Selenium test for FPMAPP-8791 in Epic FPMAPP-8590 - 20260326_153008